organizaçao da esrutura

--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -9,7 +9,7 @@
 <body>
     <head>
         <nav>
-            <a href="">Quem sou?</a>
+            <a href="#" id="eu">Quem sou?</a>
             <a href="">Por que sistemas para internet?</a>
             <a href="">Habilidades</a>
             <a href="">Projetos</a>
@@ -17,7 +17,29 @@
         </nav>
     </head>
     <main>
-
+        <a href="#">Quem sou?</a>
+            <img src="images/perfil_250.png" alt="foto_perfil"> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nostrum! At excepturi veritatis maiores dolore assumenda quisquam itaque quidem nobis recusandae. Rem cupiditate repellendus maiores animi excepturi voluptatem ab quae?</p> 
+        <a href="">Por que sistemas para internet?</a> 
+            <img src="#" alt="img_ti"> 
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis est esse veritatis repellendus alias voluptatibus, ad obcaecati ducimus tempore corporis fugit itaque odio quam asperiores numquam amet deserunt, qui nisi.</p>
+        <a href="">Habilidades</a> 
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        <a href="">Projetos</a> 
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum sapiente dolores temporibus consectetur rem qui fugiat iusto eius ipsa corrupti quidem assumenda nisi sequi voluptatem eveniet sunt, adipisci, animi porro!</p>
+        <a href="">Contatos</a>
+        <p><a href="https://www.instagram.com/francisco_._.fernandes_._/" target="_blank">Instagram</a></p>
+        <p><a href="https://github.com/">Github</a></p>
+        <p><a href="https://br.linkedin.com/">LinkedIn</a></p>
     </main>
     <footer>
 
