--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -8,41 +8,45 @@
 </head>
 <body>
     <head>
+        <img src="images/perfil_250.png" alt="foto_perfil"> 
         <nav>
-            <a href="#" id="eu">Quem sou?</a>
-            <a href="">Por que sistemas para internet?</a>
-            <a href="">Habilidades</a>
+            <a href="">Habilidades</a><!--código e outros--> 
             <a href="">Projetos</a>
             <a href="">Contatos</a>
         </nav>
     </head>
     <main>
-        <a href="#">Quem sou?</a>
-            <img src="images/perfil_250.png" alt="foto_perfil"> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nostrum! At excepturi veritatis maiores dolore assumenda quisquam itaque quidem nobis recusandae. Rem cupiditate repellendus maiores animi excepturi voluptatem ab quae?</p> 
-        <a href="">Por que sistemas para internet?</a> 
-            <img src="#" alt="img_ti"> 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis est esse veritatis repellendus alias voluptatibus, ad obcaecati ducimus tempore corporis fugit itaque odio quam asperiores numquam amet deserunt, qui nisi.</p>
+        <h1>Fracisco Fernandes</h1>
+        <p>Graduando em Tecnologia em Sistemas para Internet</p>
+        <p>Dev Front-end</p>
         <a href="">Habilidades</a> 
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+             <ul>
+               <h2>Hard Skills</h2>
+                <li>HTML5, CSS3 e JavaScript</li>
+                <li>Git e Github</li>
+                <li>Inglês(Nivel básico)</li>
             </ul>
+            <ul>
+                <h2>Soft Skills</h2>
+                <li>Comunicação interpessoal</li>
+                <li>Capacidade analítica</li>
+                <li>Proatividade</li>
+                <li>Gestão de tempo</li>
+                <li>Criatividade</li>
+                <li>Trabalho em equipe e cooperação</li>
+            </ul>
+            
         <a href="">Projetos</a> 
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum sapiente dolores temporibus consectetur rem qui fugiat iusto eius ipsa corrupti quidem assumenda nisi sequi voluptatem eveniet sunt, adipisci, animi porro!</p>
-        <a href="">Contatos</a>
-        <p><a href="https://www.instagram.com/francisco_._.fernandes_._/" target="_blank">Instagram</a></p>
-        <p><a href="https://github.com/">Github</a></p>
-        <p><a href="https://br.linkedin.com/">LinkedIn</a></p>
+            <h1>Projeto Android</h1>
+            <p>Projeto criado no curso de html e css3 do curso em video do prof. Gustavo Guanabara, com a finalidade de aplicar os conteúdos estudados.</p>
+            <img src="images/projeto_andoid.png" alt="Projeto andoid">
     </main>
     <footer>
-
+        <a href="">Contatos</a>
+        <p><a href="https://www.instagram.com/francisco_._.fernandes_._/" target="_blank">Instagram</a></p>
+        <p><a href="https://github.com/" target="_blank">Github</a></p>
+        <p><a href="https://br.linkedin.com/" target="_blank">LinkedIn</a></p>
+        Criado por <strong>Francisco Fernandes</strong>
     </footer>
 </body>
 </html>
