--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -10,43 +10,48 @@
     <head>
         <img src="images/perfil_250.png" alt="foto_perfil"> 
         <nav>
-            <a href="">Habilidades</a><!--código e outros--> 
-            <a href="">Projetos</a>
-            <a href="">Contatos</a>
+            <a href="#habilidades">Habilidades</a><!--código e outros--> 
+            <a href="#projetos">Projetos</a>
+            <a href="#contatos">Contatos</a>
         </nav>
     </head>
     <main>
         <h1>Fracisco Fernandes</h1>
         <p>Graduando em Tecnologia em Sistemas para Internet</p>
         <p>Dev Front-end</p>
-        <a href="">Habilidades</a> 
-             <ul>
-               <h2>Hard Skills</h2>
-                <li>HTML5, CSS3 e JavaScript</li>
-                <li>Git e Github</li>
-                <li>Inglês(Nivel básico)</li>
-            </ul>
-            <ul>
-                <h2>Soft Skills</h2>
-                <li>Comunicação interpessoal</li>
-                <li>Capacidade analítica</li>
-                <li>Proatividade</li>
-                <li>Gestão de tempo</li>
-                <li>Criatividade</li>
-                <li>Trabalho em equipe e cooperação</li>
-            </ul>
-            
-        <a href="">Projetos</a> 
-            <h1>Projeto Android</h1>
-            <p>Projeto criado no curso de html e css3 do curso em video do prof. Gustavo Guanabara, com a finalidade de aplicar os conteúdos estudados.</p>
-            <img src="images/projeto_andoid.png" alt="Projeto andoid">
+    <section id="habilidades">
+        <h2>Habilidades</h2>
+         <ul>
+           <h3>Hard Skills</h3>
+            <li>HTML5, CSS3 e JavaScript</li>
+            <li>Git e Github</li>
+            <li>Inglês(Nivel básico)</li>
+        </ul>
+        <ul>
+            <h3>Soft Skills</h3>
+            <li>Comunicação interpessoal</li>
+            <li>Capacidade analítica</li>
+            <li>Proatividade</li>
+            <li>Gestão de tempo</li>
+            <li>Criatividade</li>
+            <li>Trabalho em equipe e cooperação</li>
+        </ul>
+    </section>
+        <section id="projetos">
+            <h2>Projetos</h2>
+                <h3>Projeto Android</h3>
+                <p>Projeto criado no curso de html e css3 do curso em video do prof. Gustavo Guanabara, com a finalidade de aplicar os conteúdos estudados. Você pode acessá-lo <a href="https://github.com/Franciscofernandes01/projeto-android" target="_blank">aqui</a></p>
+                <img src="images/projeto_andoid.png" alt="Projeto andoid">
+        </section>
     </main>
     <footer>
-        <a href="">Contatos</a>
-        <p><a href="https://www.instagram.com/francisco_._.fernandes_._/" target="_blank">Instagram</a></p>
-        <p><a href="https://github.com/" target="_blank">Github</a></p>
-        <p><a href="https://br.linkedin.com/" target="_blank">LinkedIn</a></p>
-        Criado por <strong>Francisco Fernandes</strong>
+        <section id="contatos">
+            <h2>Contatos</h2>
+            <p><a href="https://www.instagram.com/francisco_._.fernandes_._/" target="_blank">Instagram</a></p>
+            <p><a href="https://github.com/Franciscofernandes01" target="_blank">Github</a></p>
+            <p><a href="https://br.linkedin.com/" target="_blank">LinkedIn</a></p><!--Ainda será criado-->
+            Criado por <strong>Francisco Fernandes</strong>
+        </section>
     </footer>
 </body>
 </html>
