ajustes pelo site da w3c
correção de tags

--- a/portifolio/portifolio.html
+++ b/portifolio/portifolio.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <head>
-        <img src="images/perfil_250.png" alt="foto_perfil"> 
+    <header>
+        <img src="images/perfil_250.png" alt="foto_perfil">
         <nav>
-            <a href="#habilidades">Habilidades</a><!--código e outros--> 
+            <a href="#habilidades">Habilidades</a><!--código e outros-->
             <a href="#projetos">Projetos</a>
             <a href="#contatos">Contatos</a>
         </nav>
-    </head>
+    </header>
     <main>
         <h1>Fracisco Fernandes</h1>
         <p>Graduando em Tecnologia em Sistemas para Internet</p>
         <p>Dev Front-end</p>
-    <section id="habilidades">
-        <h2>Habilidades</h2>
-         <ul>
-           <h3>Hard Skills</h3>
-            <li>HTML5, CSS3 e JavaScript</li>
-            <li>Git e Github</li>
-            <li>Inglês(Nivel básico)</li>
-        </ul>
-        <ul>
+        <section id="habilidades">
+            <h2>Habilidades</h2>
+            <h3>Hard Skills</h3>
+            <ul>
+                <li>HTML5, CSS3 e JavaScript</li>
+                <li>Git e Github</li>
+                <li>Inglês(Nivel básico)</li>
+            </ul>
             <h3>Soft Skills</h3>
-            <li>Comunicação interpessoal</li>
-            <li>Capacidade analítica</li>
-            <li>Proatividade</li>
-            <li>Gestão de tempo</li>
-            <li>Criatividade</li>
-            <li>Trabalho em equipe e cooperação</li>
-        </ul>
-    </section>
+            <ul>
+                <li>Comunicação interpessoal</li>
+                <li>Capacidade analítica</li>
+                <li>Proatividade</li>
+                <li>Gestão de tempo</li>
+                <li>Criatividade</li>
+                <li>Trabalho em equipe e cooperação</li>
+            </ul>
+        </section>
         <section id="projetos">
             <h2>Projetos</h2>
-                <h3>Projeto Android</h3>
-                <p>Projeto criado no curso de html e css3 do curso em video do prof. Gustavo Guanabara, com a finalidade de aplicar os conteúdos estudados. Você pode acessá-lo <a href="https://github.com/Franciscofernandes01/projeto-android" target="_blank">aqui</a></p>
-                <img src="images/projeto_andoid.png" alt="Projeto andoid">
+            <h3>Projeto Android</h3>
+            <p>Projeto criado no curso de html e css3 do curso em video do prof. Gustavo Guanabara, com a finalidade de
+                aplicar os conteúdos estudados. Você pode acessá-lo <a
+                    href="https://github.com/Franciscofernandes01/projeto-android" target="_blank">aqui</a></p>
+            <img src="images/projeto_andoid.png" alt="Projeto andoid">
         </section>
     </main>
     <footer>
@@ -54,4 +58,5 @@
         </section>
     </footer>
 </body>
+
 </html>
